--- a/style.css
+++ b/style.css
@@ -50,10 +50,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: "Poppins", "sans-serif";
 }
 
 nav {
-  font-family: "Poppins", "sans-serif";
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -71,4 +71,11 @@ nav > p:nth-child(1) {
 .library {
   flex: 1;
   background-color: #f0eef1;
+}
+
+.library > .addBook {
+  font-family: inherit;
+  padding: 0.5em 1em;
+  font-size: 20px;
+  font-weight: 700;
 }
