--- a/style.css
+++ b/style.css
@@ -79,3 +79,37 @@ nav > p:nth-child(1) {
   font-size: 20px;
   font-weight: 700;
 }
+
+.book-container {
+  display: grid;
+  gap: 50px;
+  padding: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+
+.book-card {
+  background-color: white;
+  border-radius: 12px;
+  outline: 1px solid rgb(66, 66, 66);
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  font-size: 25px;
+  font-weight: 400;
+}
+
+.book-card > .delete-book-btn {
+  width: 100%;
+  background-color: #F39A9B;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+
+  &:hover {
+    background-color: #f01619;
+    color: white;
+  }
+}
+
